# hooking

./: MANIFEST.in  README.md  setup.cfg
docs/modules/: README.md
docs/modules/content/hooking/: README.md
docs/modules/content/hooking.constant/: README.md
docs/modules/content/hooking.constant/content/: functions.md
docs/modules/content/hooking.context/: README.md
docs/modules/content/hooking.context/content/: functions.md
docs/modules/content/hooking.context/content/classes/: Context.md
docs/modules/content/hooking.dto/: README.md
docs/modules/content/hooking.dto/content/: functions.md
docs/modules/content/hooking.dto/content/classes/: Context.md  HookInfo.md  TargetInfo.md
docs/modules/content/hooking.error/: README.md
docs/modules/content/hooking.error/content/: functions.md
docs/modules/content/hooking.error/content/classes/: ChainBreak.md  Error.md
docs/modules/content/hooking.loose/: README.md
docs/modules/content/hooking.loose/content/: functions.md
docs/modules/content/hooking.loose/content/classes/: H.md
docs/modules/content/hooking.runner/: README.md
docs/modules/content/hooking.runner/content/: functions.md
docs/modules/content/hooking.runner/content/classes/: Runner.md
docs/modules/content/hooking.tight/: README.md
docs/modules/content/hooking.tight/content/: functions.md
docs/modules/content/hooking/content/: functions.md
docs/modules/content/hooking/content/classes/: Break.md  ChainBreak.md  Context.md  Error.md  H.md  HookInfo.md  TargetInfo.md
hooking/: __init__.py  __main__.py
hooking/constant/: __init__.py
hooking/context/: __init__.py
hooking/dto/: __init__.py
hooking/error/: __init__.py
hooking/loose/: __init__.py
hooking/runner/: __init__.py
hooking/tight/: __init__.py
tests/: test_h.py  util.py
tests/loose/: base.py  test.py
tests/tight/: base.py  test.py
