[metadata]
name = hooking
version = file: VERSION
url = https://github.com/pyrustic/hooking
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Event lifecycle oriented hooking
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    hooking
    hooks
    library
    mechanism
    lifecycle
    events
    handlers
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    hooking = hooking.__main__:main
