[metadata]
name = hooking
version = file: VERSION
url = https://github.com/pyrustic/hooking
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Generic dual-paradigm hooking mechanism
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    minimalist
    generic
    hooking
    wrap
    augment
    override
    hooks
    library
    handlers
    pyrustic
    tag
    tagging
    events
    bind
    decorator
    decoration
    coupling
    loose-coupling
    tight-coupling
    routing
    debugging
    benchmarking
    dual-paradigm
    intuitive
    api
    plugin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    hooking = hooking.__main__:main
